[package]
name = "tsumugu"
version = "0.0.1"
edition = "2021"
description = "A HTTP(S) syncing tool with lower overhead, for OSS mirrors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["derive"] }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
url = "2.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
filetime = "0.2.21"
crossbeam-deque = "0.8.3"
