[package]
name = "tsumugu"
version = "0.0.1"
edition = "2021"
description = "A HTTP(S) syncing tool with lower overhead, for OSS mirrors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.3.12", features = ["derive"] }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking", "stream"] }
scraper = "0.17.1"
url = "2.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
filetime = "0.2.21"
crossbeam-deque = "0.8.3"
walkdir = "2.3.3"
tokio = "1.29.1"
indicatif = "0.17.5"
futures-util = "0.3.28"
humansize = "2.1.3"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
